first draft of methods and results

--- a/doc/manuscript.Rmd
+++ b/doc/manuscript.Rmd
@@ -51,28 +51,7 @@ Original datasets, R code for analysis and Rmarkdown code for creation of the ma
 
 # Introduction
 
-In post-industrial landscapes affected by the phenomenon of urban contraction, land located in the heart of cities remains unused for long periods (Haase et al., 2014) . When the use of any urban plot ceases, it is colonized by plants from the regional flora capable of living in urban environments (Johnson et al., 2017) . These urban plants are adapted to disturbances and can grow in degraded soils; some even accumulate heavy metals, making them nature-based solutions for bioremediation of degraded lands (Song et al., 2019) . Species traits, along with the legacy of human impact, determine which regional flora species colonize which plots (Swan et al., 2021) . When the human legacy is intense, the plant communities that develop will be novel communities, different from the historical reference communities that existed before human intervention (Gedan and Fernández-Pascual, 2019) . The novelty of the communities can be reflected in their floristic, compositional and phylogenetic composition, including their proportion of exotic species (Lososová et al., 2012) . In any case, proper management of urban communities can turn them into resources with high ecological and social potential (Anderson and Minor, 2017). (Kowarik, 2018) : in the Ibero-Atlantic ecoregion, anthropogenic habitats can host up to a third of the ecoregional flora.
-
-The ability of plants to colonize any habitat, including urban ones, depends largely on their seed regeneration niche, that is, on their dispersal, persistence, germination and establishment functions (Grubb, 1977, Saatkamp et al., 2019) . However, although it is known that urban species often share a series of functional and ecological traits (Aronson et al., 2007, Lososová et al., 2006) , little is known about their seed regeneration niche. Especially, information on its germination traits is lacking. In species living in non-anthropogenic environments, germination phenology is regulated by environmental factors (water, temperature, light) to ensure that germination occurs at the right time to maximize subsequent seedling survival (Carta et al., 2022a) . Compared to the large amount of data on the germination of species from non-anthropogenic habitats, little is known about what factors regulate the germination of urban species. Considering other habitats affected by humans (Fernández-Pascual et al., 2022) , it could be expected that urban seeds have their germination unrelated to macroclimatic signals and show tolerance to stress due to heat, drought or heavy metals. However, this hypothesis needs to be tested through a synthesis of the seed regeneration niche in urban environments.
-
-
-Cities 
-1. highly fragmented landscapes
-2. mosaics of heterogeneous ecosystems (in terms of size, fragmentation, population density and land use)
-3. subject to different degrees of human interference, leading to a stepwise transformation of pristine ecosystems to novel urban ecosystems
-4. comprised of a patchwork of paved and unpaved spaces, built and vacant land, and newly developed and obsolescent and/or abandoned buildings and infrastructure
-5. contains a multitude of vacant lots, railway sidings, utility easements, corridors between buildings and canal sides that are often overgrown with spontaneous vegetation, which are not coherently managed, and which seem to occupy an uncertain, interstitial niche in the urban matrix
-
-
-Cities are comprised of a patchwork of paved and unpaved spaces, built and vacant land, and newly developed and obsolescent and/or abandoned buildings and infrastructure. They are mosaics of heterogeneous ecosystems (in terms of size, fragmentation, population density and land use) which are subject to different degrees of human interference, leading to a stepwise transformation of pristine ecosystems to novel urban ecosystems (Kowarik, 2005).
-
-The “Four Nature approach” narrows down the variety of transformational stages in urban settings to four major types that can supply wilderness in urban region (Kowarik 1992, 2005). Each of the four types relates to nature in general but results from different trajectories in human-nature interactions:
-
-Spontaneous vegetation appears in different habitat types in the urban matrix,. Multitude of vacant lots, railway sidings, utility easements, corridors between buildings and canal sides that are often overgrown with spontaneous vegetation, which are not coherently managed, and which seem to occupy an uncertain, interstitial niche in the urban matrix. The spontaneous herbs could provide the very interesting pool of species for ecological restoration of the urban area. Their ecological value has been clear since many years because their contribution to the ecosystem services in urban areas. Although their aesthetic value has been highlighted repeatedly, their acceptance by the residents in urban areas has been questioned. Many residents associate the presence of spontaneous plants with the neglect in maintenance by public (municipal) management service. Spontaneous native urban vegetation has commonly been described as demonstrating resilience (Ignatieva et al., 2000) and exhibiting adaptations to human disturbance (Lundholm and Marlin, 2006; Sukopp, 2004).
-
-Urban species pool is comprised of native species present before the urban development, native species developed because the new urban ecosystem and introduced species by human activity. However, just some of them can adapt to urban environment.
-
-IGS (informal green space) consists of any urban space with a history of strong anthropogenic disturbance that is covered at least partly with non-remnant, spontaneous vegetation (Del Tredici, 2010). 
+In post-industrial landscapes affected by the phenomenon of urban contraction, land located in the heart of cities remains unused for long periods (Haase et al., 2014) . When the use of any urban plot ceases, it is colonized by plants, fungi or bacteria from the regional species pools that capable of living in urban environments (Johnson et al., 2017) . This urban biota is adapted to disturbance and can grow in degraded soils; this should make these species useful for nature-based solutions such as bioremediation of degraded lands (Song et al., 2019) . Species traits, along with the legacy of human impact, determine which regional pool species colonize which plots (Swan et al., 2021) . When the human legacy is intense, the communities that develop will be novel communities, different from the historical reference communities that existed before human intervention (Gedan and Fernández-Pascual, 2019) . The novelty of the communities can be reflected in their composition, including their elements such as the proportion of exotic species or the proportion of obligate synanthropic species (Lososová et al., 2012) . In any case, proper management of urban communities can turn them into resources with high ecological and social potential (Anderson and Minor, 2017). (Kowarik, 2018). Cities are comprised of a patchwork of paved and unpaved spaces, built and vacant land, and newly developed and obsolescent and/or abandoned buildings and infrastructure. They are mosaics of heterogeneous ecosystems (in terms of size, fragmentation, population density and land use) which are subject to different degrees of human interference, leading to a stepwise transformation of pristine ecosystems to novel urban ecosystems (Kowarik, 2005). The “Four Nature approach” narrows down the variety of transformational stages in urban settings to four major types that can supply wilderness in urban region (Kowarik 1992, 2005). 
 
 # Materials and methods
 
@@ -116,19 +95,39 @@ DNA analysis by AllGenetics included DNA extraction; library preparation with 2 
 
 ## Statistical analysis
 
+We performed all analyses using R version 4.3.1 [@RN5387] and the package *tidyverse* [@RN5387] for data manipulation and visualization. To describe soil temperatures as recorded by the dataloggers, we calculated the mean annual temperature, the mean diurnal range and the temperature annual range following the same methdology as the one applied to calculate bioclimatic indices bio1, bio2 and bio7 in WorldClim [@RN5064]. To assess the variability in soil physicochemical parameters, we conducted a Principal Component Analysis (PCA) as implemented in the R package *FactoMineR* [@RN3166], and a correlation analysis to detect auto-correlated soil variables. We used PERMANOVA as implemented in *vegan* [@RN5386] to test differences between habitat types in their soil variables and their composition of plant species, fungi ASVs and bacteria ASVs. We used Non-metric Multi-Dimensional Scaling (NMDS) ordination as implemented in *vegan* [@RN5386] to assess variation in taxonomic composition of plants (abundance values of species), fungi (presence/absence of ASVs) and bacteria (presence/absence of ASVs). We used environmental fitting as implemented in *vegan* [@RN5386] to check the correlation between the community ordination axes and the soil physicochemical properties. We used the NMDS multidimensional compositional distance from each urban plot (i.e. park, roadside, residential or industrial) to the centroid of the two reference non-urban habitats (i.e. forests and meadows) to calculate for each plot, taxonomic group and reference habitat a value of community novelty. We fitted a Generalized Mixed Model using the package *nlme* [@RN2333] to test the effect on comminity novelty of taxonomic group, habitat of reference (forest or meadow), urban habitat (park, roadside, residential or industrial) and soil physicochemical variables. The models inclused sampling plot as a random factor.
+
 # Results
 
-## Soil temperatures and properties across habitats
+## Soil properties across habitats
 
-## Plant, fungal and bacterial diversity across habitats
+Soil temperature records (**Figure 2A**) indicated that forest soils were relatively buffered in their range of variation, with a mean annual temperature of 11.4 ºC, a mean diurnal range of 1.72 ºC and an annual range of 4.74 ºC. The meadow and urban plots had more thermal oscillation, with a mean diurnal range above 4 ºC and an annual range above 10 ºC. PCA ordination of the soil physicochemical properties (**Appendix S1**) indicated that the first axis of variation, explaining 23% of the variance, ordered the soils according to their concentration of heavy metals. The variables with the highest contribution to this axis (> 10%) were the soil contents in Pb, Cu, Zn, Cd and Cr, which accounted for 66% of the variability of the first axis. This first axis did not separate urban from non-urban habitats: for example, vacant industrial lots had some of the highest concentration in heavy metals, but also some of the lowest. Likewise, forest plots were distributed across the first axis. The second axis of variation explained 21% of the variance and ordered soils according to their compaction and water retention capacities, with the highest contributing variables (> 10%) being organic matter content, bulk density, N concentration and pH, which made up 59% of the axis' variability. This axis did separate soils according to their habitat: for example, forest sites had high organic matter and N content, while industrial vacant lots had higher bulk density and pH. The third axis explained 10% of the variability and ordered soils according to their content in Mg, with the highest contributing variables (>10%) being Mg content, Mg/K ratio and conductivity, together explaining 50% of the axis. In this case, like for the first axis, there was no clear separation between habitats, with industrial sites having some of the highest and the lowest values. Correlation analysis showed strong correlations between the groups of variables contributing to the first, second and third axes (**Appendix S1**). Therefore, to avoid autocorrelation issues, for further analyses we kept the variables Pb content, organic matter content and Mg content (**Figure 2B**), which together provided a straightforward biological interpretation of patterns in soil composition. Of these values, as previously indicated by the PCA, organic matter was the only one with a clear pattern of variation: a decrease from the non-urban to the urban habitats. A PERMANOVA of the soil values indicated that there was not a significant difference between habitats in their soil physicochemical properties (100,000 permutations, R^2^ = 0.19, F = 1.15, p = 0.31).
 
-> PERMANOVAs
+```{r fig2, out.width = "450px", echo = FALSE, fig.cap = "Boxplot of soil properties accross habitats. (A) Temperatures recorded every hour in one sampling plot per habitat from 1 Jan 2024 to 31 Dec 2024. (B) Soil physicochemical properties. Values are shown for the three most explanatory and uncorrelated variables, as per a previous PCA analysis: soil Pb content, soil organic matter content, and soil Mg content."}
+knitr::include_graphics("../results/figures/Fig2.png")
+```
 
-> Analysis with species, genera and ASVs
+> Poner unidades de las variables en figura
 
-> Analysis with presence absence
+## Plant, fungal and bacterial communities across habitats
+
+The survey of plant diversity yielded 216 species, with the average number per plot being 26 (min = 10, max = 38). Of these species, 48% were only found in urban-habitats (parks, roadsides, residential lots and industrial lots), 27% occurred only in non-urban habitats (forests and meadows) and 25% were shared by both urban and non-urban habitats (**Fig3A**). On average, the habitat with the highest number of species per plot were the industrial lots (29), followed by residential lots (27), roadsides (24), meadows (23), parks (20) and forests (18). The most frequent species were *Holcus lanatus* (22 plots), *Plantago lanceolata* (20), *Helminthotheca echioides* (16), *Dactylis glomerata* (15) and *Lotus corniculatus* (14). PERMANOVA indicated that the plant species composition was significantly different accross habitats (100,000 permutations, R^2^ = 0.42, F = 3.48, p = < 0.001). NMDS ordination of the plant species composition (**Fig. 3D**) indicated that the plots belonging to the same habitat were relatively grouped together, with the main exception being one of the roadside plots. The ordination indicated that the major gradient in vegetation composition along the first axis was a separation between the forest plots and the rest, with the meadows being the closest to the forests. Environmental fitting of the Pb, organic matter and Mg vectors onto the ordination indicated that none of the soils factors had a significant correlation (R^2^ < 0.14, p > 0.05) with the composition of the plant communities.
+
+The DNA metabarcoding of soil fungal communities resulted in 4,689 ASVs. Of these ASVs, 46% were only found in urban-habitats (parks, roadsides, residential lots and industrial lots), 36% occurred only in non-urban habitats (forests and meadows) and 18% were shared by both urban and non-urban habitats (**Fig3B**). The average number of ASVs per plot was 340 (min = 174, max = 587), with the habitat-averages ranging from residential vacant lots (415) to forests (393), meadows (336), parks (323), industrial vacant lots (300) and roadsides (276). The majority of ASVs were assigned to Ascomycota (56%), Basidiomycota (24%), Rozellomycota (10%) and Glomeromycota (4%). Of the different habitats, forests had the highest proportion of Basidiomycota (25% vs. < 17% in the other habitats) and the lowest proportion of Ascomycota (57% vs. > 64%). The proportion of Rozellomycota was similar across habitats (from 6% in meadows to 11% in parks). The proportion of Glomeromycota varied between 5% in meadows to 0.5% in forests. A PERMANOVA performed on the presence/absence of ASVs indicated significant differences in composition between habitats (100,000 permutations, R^2^ = 0.33, F = 2.39, p = < 0.001). NMDS ordination of the fungal ASV composition (**Fig. 3E**) behavead similarly to the ordination of plant communities, with plots tending to group by habitat, and the major compositional gradient reflecting the separation between the forest plots and the rest. Environmental fitting of the Pb, organic matter and Mg vectors onto the ordination indicated only organic matter content had a significant correlation (R^2^ = 0.46,  p < 0.001) with the composition of the fungal communities. Low organic matter content correlated with the communities from industrial vacant lots and roadsides (**Fig. 3E**).
+
+For the bacterial communities, DNA metabarcoding yielded 16,306 ASVs. Of these ASVs, 44% were only found in urban-habitats (parks, roadsides, residential lots and industrial lots), 31% occurred only in non-urban habitats (forests and meadows) and 25% were shared by both urban and non-urban habitats (**Fig3C**). The average number of ASVs per plot was 1769 (min = 1478, max = 2074), with the habitat-averages ranging from roadsides (1848) to industrial lots (1794), residential lots (1792), meadows (1775), parks (1706) and forests (1697). The majority of ASVs were assigned to Proteobacteria (22%), Planctomycetota (15%), Actinobacteriota (15%) and Acidobacteriota (10%). Compared to other habitats, forests had higher proportions of Proteobacteria and Proteobacteria; a lower proportion of Actinobacteriota; and a similar proportion of Planctomycetota. A PERMANOVA performed on the presence/absence of ASVs indicated significant differences in composition between habitats (100,000 permutations, R^2^ = 0.32, F = 2.51, p = < 0.001). NMDS ordination of the bacterial ASV composition (**Fig. 3F**) resulted in less grouping by habitat than for the plants and the fungi, but still reflected a main composotional gradient from forests to industrial vacant plots. Like in the case of the fungal communities, environmental fitting of the Pb, organic matter and Mg vectors onto the ordination indicated only organic matter content had a significant correlation (R^2^ = 0.39,  p = 0.001) with the composition of the fungal communities. Low organic matter content correlated with the communities from industrial vacant lots and roadsides (**Fig. 3F**).
+
+```{r fig3, out.width = "450px", echo = FALSE, fig.cap = "Plant, fungal and bacterial diversity of the sampling plots. Top panels show Venn plots for the shared numbers of (A) plant species, (B) fungal ASVs and (c) bacterial ASVs between urban (parks, roadsides, residential lots and industrial lots) and non-urban (forests, meadows) habitats. Bottom panels show  biplots of community composition ordinartion produced by Non-metric Multi-Dimensional Scaling (NMDS). NMDs were conducted for (A) plant survey (by species abundance), (B) the soil fungal survey (by ASV presence/absence) and (C) the soil bacterial survey (by ASV presence/absence). Colors indicate the habitat. In the biplots, arrows and labels indicate soil variables with a significant correlation with the composition of the communities. Only soil organic matter content and fungal-bacterial communities had a significant correlation."}
+knitr::include_graphics("../results/figures/Fig3.png")
+```
 
 ## Community novelty across habitats and taxonomic groups
+
+We used the NMDS multidimensional compositional distance (calculate from the ordinations in **Fig. 3D-F**) from each urban plot (i.e. park, roadside, residential or industrial) to the centroid of the two reference non-urban habitats (i.e. forests and meadows) to calculate for each plot, taxonomic group and reference habitat a value of community novelty (**Fig. 4**). The novelty was significantly different between taxonomic groups (F = 45.88, p < 0.001), being higher for plants (2.45 ± 0.332 S.E.) than for fungi (2.15 ± 0.396 S.E.) and bacteria (1.56 ± 0.303 S.E.). The novelty was also significantly different depending on the reference non-urban habitat that was used (F = 199.08, p < 0.001), being higher compared to forests (2.60 ± 0.287 S.E.) than to meadows (1.51 ± 0.300 S.E.). Nonetheless, for each taxonomic group, there was a high positive correlation between the novelty compared against forests or meadows (r = 0.5 for plants; 0.7 for fungi; 0.9 for bacteria). The different urban habitats also differed significantly in their novelty (F = 9.51, p = 0.001), being higher for industrial vacant lots (2.46 ± 0.311 S.E.) than for roadsides (2.18 ± 0.367 S.E.), parks (1.95 ± 0.440 S.E.) and residential vacant lots (1.63 ± 0.307 S.E.). The soil physicochemical properties (Pb, organic matter, Mg) had no significant effect on community novelty (p > 0.05).
+
+```{r fig4, out.width = "450px", echo = FALSE, fig.cap = "Community novelty for plants, fungi and bacteria. Community novelty was calculated as the multidimensional distance from each urban plot to the centroid of two reference non-urban habitats (forests, panels A-C-E; and meadows, panels B-D-F), as calculated by NMDS ordination. Novelty was calculated separately for plant (panels A-B), fungal (panels C-D) and bacterial communities (panels E-F)."}
+knitr::include_graphics("../results/figures/Fig4.png")
+```
 
 ## Soil drivers of novelty
 
@@ -137,3 +136,16 @@ DNA analysis by AllGenetics included DNA extraction; library preparation with 2 
 The recorded flora represents just a subset of possible spontaneous vegetation because this study was carried on during limited time which covers just part of the growing season of the whole vegetation.
 
 There are some other habitats in the city which were not included in the present study, e.g. wetlands, beach, cliffs.
+
+# Data availability
+
+The original datasets, as well as R code for analysis and creation of the manuscript can be accessed at the GitHub repository https://github.com/efernandezpascual/disturbance. Upon publication, a version of record of the repository will be deposited in Zenodo.
+
+# References
+
+::: {#refs}
+:::
+
+# Supplementary
+
+**Appendix S1** Principal Component Analysis and correlation analysis of the soil physicochemical properties.
